@@ -25,6 +25,11 @@ include::content/docs/variables.adoc-include[]
 
 * The Mesh Server will require Java 11 with the release of 2.0.0. The runtime support for Java 8 will be dropped. The Mesh Java REST client will still be usable with Java 8.
 
+[[pending]]
+== Pending
+
+icon:plus[] Elasticsearch: The `branchUuid` property was added to documents in the search index.
+
 [[v1.5.2]]
 == 1.5.2 (22.06.2020)
 
